--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -53,13 +53,13 @@
 
 	<link rel="stylesheet" href="/custom.css">
 
-  </head><body class="ma0 avenir development is-page is-page page-faq">
+  </head><body class="ma0 avenir bg-near-white development is-page is-page page-faq">
     
    
   
 
   <header>
-    <div class="bg-black">
+    <div class="bg-orange">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l center items-center justify-between">
     <a href="/" class="f3 fw2 hover-white white-90 dib no-underline">
@@ -132,11 +132,8 @@
     </div></article>
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-orange bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white white-70 dn dib-ns pv2 ph3 no-underline" href="http://localhost:1313/" >
-    &copy;  Siv & Oliver 2026 
-  </a>
     <div><div class="ananke-socials"></div>
 </div>
   </div>
