--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
 	<link rel="stylesheet" href="/custom.css">
 
-  </head><body class="ma0 avenir development is-home">
+  </head><body class="ma0 avenir bg-near-white development is-home">
     
 
   
@@ -144,11 +144,8 @@
   
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-orange bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white white-70 dn dib-ns pv2 ph3 no-underline" href="http://localhost:1313/" >
-    &copy;  Siv & Oliver 2026 
-  </a>
     <div><div class="ananke-socials"></div>
 </div>
   </div>
