--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -53,13 +53,13 @@
 
 	<link rel="stylesheet" href="/custom.css">
 
-  </head><body class="ma0 avenir development is-page is-page page-schedule">
+  </head><body class="ma0 avenir bg-near-white development is-page is-page page-schedule">
     
    
   
 
   <header>
-    <div class="bg-black">
+    <div class="bg-orange">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l center items-center justify-between">
     <a href="/" class="f3 fw2 hover-white white-90 dib no-underline">
@@ -130,10 +130,10 @@
 <p><strong>15:00</strong> – Skål!</p>
 <h2 id="hygge--havespil">Hygge &amp; havespil</h2>
 <p><strong>15:30-18:00</strong> – Fri leg</p>
-<h2 id="middag--fest">Middag &amp; Fest</h2>
+<h2 id="middag--fest">Middag &amp; fest</h2>
 <p><strong>18:00-??</strong> – Mad, vin og dans</p>
 <hr>
-<h2 id="morgenmad-søndag">Morgenmad Søndag</h2>
+<h2 id="morgenmad-søndag">Morgenmad søndag</h2>
 <p><strong>10:00-11:00</strong> – Morgenmad og debrief for de overnattende</p>
 <ul class="pa0">
   
@@ -143,11 +143,8 @@
     </div></article>
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-orange bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white white-70 dn dib-ns pv2 ph3 no-underline" href="http://localhost:1313/" >
-    &copy;  Siv & Oliver 2026 
-  </a>
     <div><div class="ananke-socials"></div>
 </div>
   </div>
