--- a/public/venue/index.html
+++ b/public/venue/index.html
@@ -53,13 +53,13 @@
 
 	<link rel="stylesheet" href="/custom.css">
 
-  </head><body class="ma0 avenir development is-page is-page page-venue">
+  </head><body class="ma0 avenir bg-near-white development is-page is-page page-venue">
     
    
   
 
   <header>
-    <div class="bg-black">
+    <div class="bg-orange">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l center items-center justify-between">
     <a href="/" class="f3 fw2 hover-white white-90 dib no-underline">
@@ -130,7 +130,7 @@ Vigsnæsvej 36
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2296.1110298165795!2d11.707061176451992!3d54.86586147276879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ad4a71577639bb%3A0x103b15e84f25991!2sVigsn%C3%A6svej%2036%2C%204862%20Guldborg!5e0!3m2!1sen!2sdk!4v1771788096591!5m2!1sen!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <h2 id="transport">Transport</h2>
 <p><strong>Hvis du kommer I bil</strong>, så er der god mulighed for at parkere på addressen.</p>
-<p><strong>Hvis du kommer med offentlig transport</strong>, så er det muligt at tage toget til Nykøbing Falster (20km) eller Sakskøbing (10km) station, men der går ingen busser til Guldborg i weekenden. Derfor anbefaler vi, at I koordinere med nogle af de andre deltagere. Vi hjælper gerne med at finde en løsning.</p>
+<p><strong>Hvis du kommer med offentlig transport</strong>, så er det muligt at tage toget til Nykøbing Falster (20km) eller Sakskøbing (10km) station, men der går ingen busser til Guldborg i weekenden. Derfor anbefaler vi, at I koordinerer med nogle af de andre deltagere. Vi hjælper gerne med at finde en løsning.</p>
 <h2 id="overnatning">Overnatning</h2>
 <p>For de naturvante er der mulighed for at slå telt op eller medbringe en camper.</p>
 <p>Hvis man foretrækker lidt mere komfort, så er der flere hoteller, B&amp;Bs eller muligheder via Airbnb inden for 10 km, blandt andet:</p>
@@ -155,11 +155,8 @@ Vigsnæsvej 36
     </div></article>
 
     </main>
-    <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="bg-orange bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white white-70 dn dib-ns pv2 ph3 no-underline" href="http://localhost:1313/" >
-    &copy;  Siv & Oliver 2026 
-  </a>
     <div><div class="ananke-socials"></div>
 </div>
   </div>
