chore: updated picture

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('http://localhost:1313/images/hero.jpg');">
+  <header class="cover bg-top" style="background-image: url('http://localhost:1313/images/collage.png');">
     
     <div class="bg-black-40">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
