--- a/public/venue/index.html
+++ b/public/venue/index.html
@@ -46,7 +46,7 @@
 
   <meta itemprop="name" content="Praktisk info">
   <meta itemprop="description" content="Hvor og hvordan">
-  <meta itemprop="wordCount" content="204">
+  <meta itemprop="wordCount" content="210">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Praktisk info">
   <meta name="twitter:description" content="Hvor og hvordan">
@@ -130,7 +130,7 @@ Vigsnæsvej 36
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2296.1110298165795!2d11.707061176451992!3d54.86586147276879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ad4a71577639bb%3A0x103b15e84f25991!2sVigsn%C3%A6svej%2036%2C%204862%20Guldborg!5e0!3m2!1sen!2sdk!4v1771788096591!5m2!1sen!2sdk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <h2 id="transport">Transport</h2>
 <p><strong>Hvis du kommer I bil</strong>, så er der god mulighed for at parkere på addressen.</p>
-<p><strong>Hvis du kommer med offentlig transport</strong>, så er det muligt at tage toget til Nykøbing Falster (20km) eller Sakskøbing (10km) station, men der går ingen busser til Guldborg i weekenden. Derfor anbefaler vi, at I koordinerer med nogle af de andre deltagere. Vi hjælper gerne med at finde en løsning.</p>
+<p><strong>Hvis du kommer med offentlig transport</strong>, så er det muligt at tage toget til Nykøbing Falster (20km) eller Sakskøbing station (10km), men der går ingen busser til Guldborg i weekenden. Derfor anbefaler vi, at I koordinerer med nogle af de andre deltagere. Vi hjælper gerne med at finde en løsning.</p>
 <h2 id="overnatning">Overnatning</h2>
 <p>For de naturvante er der mulighed for at slå telt op eller medbringe en camper.</p>
 <p>Hvis man foretrækker lidt mere komfort, så er der flere hoteller, B&amp;Bs eller muligheder via Airbnb inden for 10 km, blandt andet:</p>
@@ -142,9 +142,10 @@ Vigsnæsvej 36
 <p>For de overnattende gæster, slutter vi weekenden af med fælles morgenmad søndag kl 10.</p>
 <h2 id="allergi-og-diæter">Allergi og diæter</h2>
 <p>Hvis du har specielle diæter eller allergi, så giv os besked ved tilmelding.</p>
-<h2 id="festen-er-uden-børn">Festen er uden børn</h2>
+<h2 id="festen">Festen</h2>
+<p>Er uden børn så vi kan feste til den lyse morgen!</p>
 <h2 id="taler-og-indslag">Taler og indslag</h2>
-<p>Hvis du ønsker at holde en tale eller lave et indslag, så tag fat i aftenens toastmaster Rebecca Rise Thomsen på tlf</p>
+<p>Hvis du ønsker at holde en tale eller lave et indslag, så tag fat i aftenens toastmaster Rebecca Rise Thomsen.</p>
 <h2 id="dresscode">Dresscode</h2>
 <p>Festligt og sommerligt - vielsen og de første timer kommer til at foregå udendørs så tag højde for vejret.</p>
 <ul class="pa0">
